--- a/project.yml
+++ b/project.yml
@@ -66,7 +66,7 @@ workflows:
     - assets
     - preprocess
     - normalize
-    # - train
+    - train
     - evaluate
     - package
     - document
